--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Hei
-a
+USEFUL LINKS
 
-Takk.
+http://blog.andreloker.de/post/2008/06/16/Keep-your-config-clean-with-external-config-files.aspx
+http://gitready.com/intermediate/2009/02/18/temporarily-ignoring-files.html
